# mosaic_pattern

./: .gitignore  CMakeLists.txt  FINAL_STEPS.md  QUICK_FIX.md  README.md  SETUP_WINDOWS.md
include/: ImageProcessor.h  MosaicGenerator.h  UI.h  Utils.h
src/: ImageProcessor.cpp  MosaicGenerator.cpp  UI.cpp  Utils.cpp  main.cpp
